<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:ignore="SpeakableTextPresentCheck">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/frame_1"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/ic_header"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                tools:ignore="ImageContrastCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/daftar"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="343dp"
            android:layout_height="450dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="17dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/user"
                    android:textColor="#9A9A9A"
                    android:textSize="20dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/line2" />

                <TextView
                    android:id="@+id/Email"
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3sp"
                    android:text="Email"
                    android:textColor="#9A9A9A"
                    android:textSize="20dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/line2" />

                <TextView
                    android:id="@+id/PhoneNumber"
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/phone"
                    android:textColor="@color/abu_abu"
                    android:textSize="20dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/line2" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:checkedButton="@+id/radio_button_2"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="195dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:text="@string/lakilaki"
                        android:textSize="18dp"
                        android:textColor="@color/abu_abu" />

                    <RadioButton
                        android:layout_width="125dp"
                        android:layout_height="match_parent"
                        android:text="@string/perempuan"
                        android:textColor="@color/abu_abu"
                        android:textSize="18dp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginTop="290dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blood Type"
                android:textSize="18dp"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reshus"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"/>
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginTop="340dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingBottom="18dp"
                android:backgroundTint="@color/abu_abu"
                android:hint="@string/pass"
                android:inputType="textPassword" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:paddingBottom="18dp"
                android:backgroundTint="@color/abu_abu"
                android:hint="@string/repass"
                android:inputType="textPassword" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:checkedButton="@+id/radio_button_1"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="343dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="181dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:text="Personal"
                    android:textColor="@color/abu_abu" />

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/abu_abu"
                    android:text="Organization"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginTop="530dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:layout_marginTop="15dp"
                android:paddingBottom="18dp"
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:hint="@string/job"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/alamat"
                android:inputType="textPassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingBottom="18dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/abu_abu"
                android:hint="@string/lokasi"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_blood_needed_location" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:textSize="18sp"
                android:textColor="@color/abu_abu"
                android:text="@string/agree"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_button"
                tools:context=".MainActivity">
                <Button
                    android:id="@+id/register"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar"
                    android:textColor="@color/birulangit"
                    android:textSize="15sp" />


            </RelativeLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>