<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlmostThereActivity"
    android:background="@color/birulangit">
    <TextView
        android:id="@+id/tulisan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifikasiacount"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setelahverifikasi"
        android:layout_centerHorizontal="true"
        android:id="@+id/tulisan2"
        android:layout_below="@+id/tulisan1"
        android:textColor="@color/white"/>
    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setelahverifikasi"
        android:layout_centerHorizontal="true"
        android:id="@+id/tulisan3"
        android:layout_below="@+id/tulisan2"
        android:textColor="@color/white"
        android:paddingStart="20dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:background="@color/birulangit"
        android:orientation="horizontal">
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            tools:context=".MainActivity"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="320dp">

            <Button
                android:id="@+id/veri"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/kirim"
                android:textColor="@color/white"
                android:textSize="15sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:gravity="center">
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Doesnt Get Code?"
            android:textColor="@color/white"/>

        <TextView
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resend"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</RelativeLayout>
